# ctrl-agent-user-service

./: .env.example  .gitignore  Dockerfile  alembic.ini  app.py  pyproject.toml  requirements.txt
contracts/: __init__.py  user.py
controllers/: user.py
extensions/: ext_db.py
migrations/versions/: 22cc2ffd9b0b_modified_user_id_to_be_uuid.py
models/: User.py
service/: passport_service.py
services/: user_service.py
tests/: test_user_service.py
