[project]
name = "ctrl-agent-user-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "jwt>=1.3.1",
    "pydantic>=2.11.1",
    "python-consul>=1.1.0",
    "python-jwt>=4.1.0",
    "uvicorn>=0.34.0",
    "werkzeug>=3.1.3",
]
