[project]
name = "ctrl-agent-user-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "jwt>=1.3.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.9",
    "pydantic[email]>=2.11.1",
    "pytest>=8.3.5",
    "python-consul>=1.1.0",
    "python-jose>=3.4.0",
    "python-jwt>=4.1.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
    "werkzeug>=3.1.3",
]
